[Bug #159206192] styled css/make txts more visible

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -47,11 +47,11 @@ ul{
 }
 
 .float-left {
-  float: left !important;
+  float: left;
 }
 
 .float-right {
-  float: right !important;
+  float: right;
 }
 legend {
   display: block;
@@ -102,7 +102,7 @@ legend {
 }
 
 .text-center {
-  text-align: center !important;
+  text-align: center;
 }
 
 /*Header*/
@@ -152,10 +152,10 @@ header a:hover{
 	margin:0 auto;
 }
 .bg{
-	background: url("../img/lap3.jpg") no-repeat;
 	height: 100%;
 	background-position: center;
 	background-size: cover;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),url("../img/hm.jpg");
 
 }
 
@@ -163,10 +163,12 @@ header a:hover{
 	margin-top: 100px;
 	font-size: 55px;
 	margin-bottom: 10px;
+	color: white
 }
 
 #showcase p{
 	font-size: 20px;
+	color: white
 }
 
 /*Forms*/
